--- a/weather-app/style.css
+++ b/weather-app/style.css
@@ -115,7 +115,8 @@ h6 {
 
 .border {
   transition: 0.2s ease-in-out;
-  border: solid 3px var(--text-blue);
+  background-color: var(--text-blue);
+  border-radius: 15px;
 }
 
 /* styling the degree in the forecast container*/
@@ -393,33 +394,4 @@ input:checked + .slider:before {
   color: #dd0606;
   text-align: center;
   margin-bottom: 20px;
-}
-
-.borderMarker {
-  position: relative;
-}
-
-.borderMarker span {
-  z-index: 1;
-  position: relative;
-  font-size: 18px;
-  cursor: pointer;
-  letter-spacing: 1px;
-}
-
-.borderMarker::after {
-  content: '';
-  position: absolute;
-  left: -0.1px;
-  right: -0.1px;
-  bottom: 0;
-  height: 100%;
-  transform: scaleY(0.3);
-  transition: transform 0.1s ease-in-out;
-  transform-origin: bottom;
-  background-color: #dd0606;
-}
-
-.borderMarker:hover::after {
-  transform: scaleY(1);
 }
