--- a/weather-app/style.css
+++ b/weather-app/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Signika:wght@500&display=swap');
 
 * {
   margin: 0;
@@ -17,7 +17,7 @@
 
 body {
   position: relative;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Signika', sans-serif;
   font-size: 10px;
   overflow-x: hidden;
   --text-color: #e2f3f5;
@@ -47,8 +47,8 @@ h6 {
   font-size: 18px;
   color: var(--text-inverse);
   margin-top: 5px;
-  font-weight: 200;
-  letter-spacing: 1px;
+  font-weight: 300;
+  letter-spacing: 2px;
 }
 
 /*styling thecontainer --------*/
@@ -111,6 +111,17 @@ h6 {
   cursor: pointer;
   color: var(--text-color);
   font-size: 1px;
+}
+
+.forecast-container h6 {
+  letter-spacing: 1px;
+}
+
+@media screen and (max-widh: 450) {
+  .forecast-container h6 {
+    letter-spacing: 0px;
+    font-size: 12px;
+  }
 }
 
 .border {
