--- a/weather-app/style.css
+++ b/weather-app/style.css
@@ -29,18 +29,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #bdc3c7; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to top,
-    #2c3e50,
-    #bdc3c7
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to top,
-    #2c3e50,
-    #bdc3c7
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  overflow: hidden;
+  background-color: var(--text-blue);
+  transition: 0.2s ease-in-out;
 }
 
 h6 {
@@ -54,16 +44,25 @@ h6 {
 /*styling thecontainer --------*/
 .container {
   position: relative;
-  width: 110%;
-  min-height: 100%;
+  width: 700px;
+  min-height: 95%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 30px 25px 30px;
+  padding: 20px 30px 0px 30px;
   background-color: var(--text-color);
   transition: 0.2s ease-in-out;
   overflow: hidden;
+  border-radius: 20px;
+}
+
+@media screen and (max-width: 600px) {
+  .container {
+    width: 100%;
+    height: 100%;
+    border-radius: 0px;
+  }
 }
 
 /* styling the timezone section -----*/
@@ -209,7 +208,7 @@ h6 {
 
 .other-info-section {
   position: absolute;
-  bottom: 0;
+  bottom: 20px;
   width: 95%;
   padding: 0px 25px;
   margin: 0 auto;
